--- a/templates/dhcptracker.html
+++ b/templates/dhcptracker.html
@@ -1,9 +1,10 @@
-<!-- (C) Copyright 2019 Hewlett Packard Enterprise Development LP. -->
+<!-- (C) Copyright 2020 Hewlett Packard Enterprise Development LP. -->
 
 {% block scripts %}
 <script src="static/scripts/jquery-1.10.2.min.js"></script>
 <link href="static/stylesheet.css" rel="stylesheet" />
 <script type="text/javascript" src="static/main.js"></script>
+<script type="text/javascript" src="static/trackers.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -16,8 +17,10 @@
 {% set totalpages=(totalentries|int/entryperpage|int)|int +1 %}
 {% endif %}
 
+<div id="updateTracker" data-type="dhcp"></div>
+
 <div id="maincontainer">
-    <table class="tablenoborder">
+    <table class="tablenoborder" id="logTable">
         <form method="post">
             <input id='action' name='action' type='hidden' value='{{ formresult.action }}' />
             <input id='currentpageoffset' name='currentpageoffset' type='hidden' value="{{pageoffset}}" />
@@ -27,24 +30,26 @@
                 <td width="10%" align="left" nowrap><font class="font13pxgrey">DHCP type</font></td>
                 <td width="20%"><font class="font13pxgrey">Information</font></td>
                 <td colspan="2" width="60%" align="right">
+                    <div id="navPage">
                     <font class="font13pxgrey">
-                        Show <select name="entryperpage" onchange="this.form.submit()">
+                        Show <select name="entryperpage" id="entryperpage" onchange="navigation();">
                             <option value="10" {% if formresult.entryperpage=="10" %} selected {% endif %}>10</option>
                             <option value="25" {% if formresult.entryperpage=="25" or formresult.entryperpage is not defined %} selected {% endif %}>25</option>
                             <option value="50" {% if formresult.entryperpage=="50" %} selected {% endif %}>50</option>
                             <option value="100" {% if formresult.entryperpage=="100" %} selected {% endif %}>100</option>
-                        </select> entries per page (page <select name="pageoffset" onchange="this.form.submit()">
+                        </select> entries per page (page <select name="pageoffset" id="pageoffset">
                             {% for i in  range(totalpages) %}
-                            <option value="{{ (i)*entryperpage|int }}" {% if (pageoffset|int)/(entryperpage|int)==(i) %}selected{% endif %}>{{ i+1 }}</option>
+                            <option value="{{ i+1 }}">{{ i+1 }}</option>
                             {% endfor %}
-                        </select> of {{ totalpages }} pages)
+                        </select> of <span id="totalpagesph">{{ totalpages }}</span> pages)
                     </font>
+                    </div>
                 </td>
             </tr>
             <tr style="background-color: grey;">
                 <td>&nbsp;</td>
                 <td align="left" valign="top">
-                    <select name="searchType" onchange="this.form.submit()">
+                    <select name="searchType" id="searchType" onchange="this.form.submit()">
                         <option value="">Select</option>
                         {% for dhcptypeInfo in dhcptypeInfo %}
                         <option value="{{ dhcptypeInfo['dhcptype'] }}" {% if formresult.searchType==dhcptypeInfo['dhcptype'] %} selected {% endif %}>{{ dhcptypeInfo['dhcptype'] }}</option>
@@ -52,28 +57,12 @@
                     </select>
                 </td>
                 <td colspan="2" align="left" valign="top">
-                    <input type="text" name="searchInfo" value="{{ formresult.searchInfo }}" size="30">
+                    <input type="text" name="searchInfo" id="searchInfo" value="{{ formresult.searchInfo }}" size="30">
                 </td>
-                <td width="10%" align="right"><input type="submit" name="searchAction" value="Search" class="button"></td>
+                <td width="10%" align="right">&nbsp;</td>
             </tr>
         </form>
-        <tbody>
-            {% for info in result %}
-            <form method="post">
-                <input type="hidden" name="id" value="{{ info['id'] }}" />
-                <tr>
-                    <td><font class="font12px">{{ ctime(info['utctime']) }}</font></td>
-                    <td><font class="font12px">{{ info['dhcptype'] }}</font></td>
-                    <td colspan="2" nowrap><font class="font12px">{{ info['information'] }}</font></td>
-                    <td align="right">
-                        <input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')">
-                    </td>
-                </tr>
-            </form>
-            {% endfor %}
-        </tbody>
+        <tbody id="logList"></tbody>
     </table>
-
     </div>
-
     {% endblock %}
