--- a/templates/snmptracker.html
+++ b/templates/snmptracker.html
@@ -1,9 +1,10 @@
-<!-- (C) Copyright 2019 Hewlett Packard Enterprise Development LP. -->
+<!-- (C) Copyright 2020 Hewlett Packard Enterprise Development LP. -->
 
 {% block scripts %}
 <script src="static/scripts/jquery-1.10.2.min.js"></script>
 <link href="static/stylesheet.css" rel="stylesheet" />
 <script type="text/javascript" src="static/main.js"></script>
+<script type="text/javascript" src="static/trackers.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -15,8 +16,11 @@
 {% else %}
 {% set totalpages=(totalentries|int/entryperpage|int)|int +1 %}
 {% endif %}
+
+<div id="updateTracker" data-type="snmp"></div>
+
 <div id="maincontainer">
-    <table class="tablenoborder">
+    <table class="tablenoborder" id="logTable">
         <form method="post">
             <input id='action' name='action' type='hidden' />
             <input id='currentpageoffset' name='currentpageoffset' type='hidden' value="{{pageoffset}}" />
@@ -27,26 +31,28 @@
                 <td width="10%" align="left" nowrap><font class="font13pxgrey">SNMP Version</font></td>
                 <td width="10%" align="left"><font class="font13pxgrey">Community</font></td>
                 <td width="20%"><font class="font13pxgrey">Information</font></td>
-                <td width="40%" align="right">
+                <td width="40%" align="right" colspan="2">
+                    <div id="navPage">
                     <font class="font13pxgrey">
-                        Show <select name="entryperpage" onchange="this.form.submit()">
+                        Show <select name="entryperpage" id="entryperpage" onchange="navigation();">
                             <option value="10" {% if formresult.entryperpage=="10" %} selected {% endif %}>10</option>
                             <option value="25" {% if formresult.entryperpage=="25" or formresult.entryperpage is not defined %} selected {% endif %}>25</option>
                             <option value="50" {% if formresult.entryperpage=="50" %} selected {% endif %}>50</option>
                             <option value="100" {% if formresult.entryperpage=="100" %} selected {% endif %}>100</option>
-                        </select> entries per page (page <select name="pageoffset" onchange="this.form.submit()">
+                        </select> entries per page (page <select name="pageoffset" id="pageoffset">
                             {% for i in  range(totalpages) %}
-                            <option value="{{ (i)*entryperpage|int }}" {% if (pageoffset|int)/(entryperpage|int)==(i) %}selected{% endif %}>{{ i+1 }}</option>
+                            <option value="{{ i+1 }}" {% if (pageoffset|int)/(entryperpage|int)==(i) %}selected{% endif %}>{{ i+1 }}</option>
                             {% endfor %}
-                        </select> of {{ totalpages }} pages)
+                        </select> of <span id="totalpagesph">{{ totalpages }}</span> pages)
                     </font>
+                    </div>
                 </td>
             </tr>
             <tr style="background-color: grey;">
                 <td align="left" nowrap>&nbsp;</td>
-                <td align="left" valign="top"><input type="text" name="searchSource" value="{{ formresult.searchSource }}" size="15"></td>
+                <td align="left" valign="top"><input type="text" name="searchSource" id="searchSource" value="{{ formresult.searchSource }}" size="15"></td>
                 <td align="left" valign="top">
-                    <select name="searchVersion" onchange="this.form.submit()">
+                    <select name="searchVersion" id="searchVersion" onchange="this.form.submit()">
                         <option value="">Select</option>
                         {% for snmpversion in versionInfo %}
                         <option value="{{ snmpversion['version'] }}" {% if formresult.searchVersion==snmpversion['version'] %} selected {% endif %}>{{ snmpversion['version'] }}</option>
@@ -54,34 +60,18 @@
                     </select>
                 </td>
                 <td align="left" valign="top">
-                    <select name="searchCommunity" onchange="this.form.submit()">
+                    <select name="searchCommunity" id="searchCommunity" onchange="this.form.submit()">
                         <option value="">Select</option>
                         {% for community in communityInfo %}
                         <option value="{{ community['community'] }}" {% if formresult.searchCommunity==community['community'] %} selected {% endif %}>{{ community['community'] }}</option>
                         {% endfor %}
                     </select>
                 </td>
-                <td align="left" valign="top"><input type="text" name="searchInfo" value="{{ formresult.searchInfo }}" size="50"></td>
-                <td width="10%" align="right"><input type="submit" name="searchAction" value="Search" class="button"></td>
+                <td align="left" valign="top" colspan="2"><input type="text" name="searchInfo" id="searchInfo" value="{{ formresult.searchInfo }}" size="50"></td>
+                <td width="10%" align="right">&nbsp;</td>
             </tr>
         </form>
-        <tbody>
-            {% for info in result %}
-            <form method="post">
-                <input type="hidden" name="id" value="{{ info['id'] }}" />
-                <tr>
-                    <td><font class="font12px">{{ ctime(info['utctime']) }}</font></td>
-                    <td><font class="font12px">{{ info['source'] }}</font></td>
-                    <td><font class="font12px">{{ info['version'] }}</font></td>
-                    <td><font class="font12px">{{ info['community'] }}</font></td>
-                    <td><font class="font12px">{{ info['information'] }}</font></td>
-                    <td align="right">
-                        <input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')">
-                    </td>
-                </tr>
-            </form>
-            {% endfor %}
-        </tbody>
+        <tbody id="logList"></tbody>
     </table>
     </div>
     {% endblock %}
