--- a/templates/sysconf.html
+++ b/templates/sysconf.html
@@ -62,6 +62,12 @@ netInfo is dictionary containing a list of variables:
                 <td class="whiteBG"><input type="number" name="retain_topologylog" value="{{sysvars['retain_topologylog']}}" /><font class="font11px"> days</font></td>
             </tr>
             <tr>
+                <td><font class="font12pxwhite">Purge Cleanup log information after</font></td>
+                <td class="whiteBG"><input type="number" name="retain_cleanuplog" value="{{sysvars['retain_cleanuplog']}}" /><font class="font11px"> days</font></td>
+                <td colspan="4">&nbsp;</td>
+                
+            </tr>
+            <tr>
                 <td><font class="font12pxwhite">IPAM System</font></td>
                 <td class="whiteBG">
                     <select name="ipamsystem" id="ipamsystem" onchange="ipamConf();">
