--- a/templates/syslog.html
+++ b/templates/syslog.html
@@ -5,6 +5,7 @@
 <link href="static/stylesheet.css" rel="stylesheet" />
 <script type="text/javascript" src="static/main.js"></script>
 <script type="text/javascript" src="static/switch.js"></script>
+<script type="text/javascript" src="static/trackers.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -17,8 +18,10 @@
 {% set totalpages=(totalentries|int/entryperpage|int)|int +1 %}
 {% endif %}
 
+<div id="updateTracker" data-type="syslog"></div>
+
 <div id="maincontainer">
-    <table class="tablenoborder">
+    <table class="tablenoborder" id="logTable">
         <form method="post">
             <input id='action' name='action' type='hidden' />
             <input id='currentpageoffset' name='currentpageoffset' type='hidden' value="{{pageoffset}}" />
@@ -29,26 +32,28 @@
                 <td width="5%" align="left" nowrap><font class="font13pxgrey">Facility</font></td>
                 <td width="5%" align="left"><font class="font13pxgrey">Severity</font></td>
                 <td width="57%"><font class="font13pxgrey">Information</font></td>
-                <td width="20%" align="right">
+                <td width="20%" align="right" colspan="2">
+                    <div id="navPage">
                     <font class="font13pxgrey">
-                        Show <select name="entryperpage" onchange="this.form.submit()">
+                        Show <select name="entryperpage" onchange="navigation()" id="entryperpage">
                             <option value="10" {% if formresult.entryperpage=="10" %} selected {% endif %}>10</option>
                             <option value="25" {% if formresult.entryperpage=="25" or formresult.entryperpage is not defined %} selected {% endif %}>25</option>
                             <option value="50" {% if formresult.entryperpage=="50" %} selected {% endif %}>50</option>
                             <option value="100" {% if formresult.entryperpage=="100" %} selected {% endif %}>100</option>
-                        </select> entries per page (page <select name="pageoffset" onchange="this.form.submit()">
+                        </select> entries per page (page <select name="pageoffset" id="pageoffset">
                             {% for i in  range(totalpages) %}
-                            <option value="{{ (i)*entryperpage|int }}" {% if (pageoffset|int)/(entryperpage|int)==(i) %}selected{% endif %}>{{ i+1 }}</option>
+                            <option value="{{ i+1 }}" {% if (pageoffset|int)/(entryperpage|int)==(i) %}selected{% endif %}>{{ i+1 }}</option>
                             {% endfor %}
-                        </select> of {{ totalpages }} pages)
+                        </select> of <span id="totalpagesph">{{ totalpages }}</span> pages)
                     </font>
+                    </div>
                 </td>
             </tr>
             <tr style="background-color: grey;">
                 <td align="left" nowrap>&nbsp;</td>
-                <td align="left" valign="top"><input type="text" name="searchSource" value="{{ formresult.searchSource }}" size="12"></td>
+                <td align="left" valign="top"><input type="text" name="searchSource" id="searchSource"value="{{ formresult.searchSource }}" size="12"></td>
                 <td align="left" valign="top">
-                    <select name="searchFacility" onchange="this.form.submit()">
+                    <select name="searchFacility" id="searchFacility" onchange="this.form.submit()">
                         <option value="">Select</option>
                         {% for facilities in facilityInfo %}
                         <option value="{{ facilities['facility'] }}" {% if formresult.searchFacility==facilities['facility'] %} selected {% endif %}>{{ facilities['facility'] }}</option>
@@ -56,34 +61,18 @@
                     </select>
                 </td>
                 <td align="left" valign="top">
-                    <select name="searchSeverity" onchange="this.form.submit()">
+                    <select name="searchSeverity" id="searchSeverity" onchange="this.form.submit()">
                         <option value="">Select</option>
                         {% for severities in severityInfo %}
                         <option value="{{ severities['severity'] }}" {% if formresult.searchSeverity==severities['severity'] %} selected {% endif %}>{{ severities['severity'] }}</option>
                         {% endfor %}
                     </select>
                 </td>
-                <td align="left" valign="top"><input type="text" name="searchInfo" value="{{ formresult.searchInfo }}" size="30"></td>
-                <td width="5%" align="right"><input type="submit" name="searchAction" value="Search" class="button"></td>
+                <td align="left" valign="top" colspan="2"><input type="text" name="searchInfo" id="searchInfo" value="{{ formresult.searchInfo }}" size="30"></td>
+                <td width="5%" align="right">&nbsp;</td>
             </tr>
         </form>
-        <tbody>
-            {% for info in result %}
-            <form method="post">
-                <input type="hidden" name="id" value="{{ info['id'] }}" />
-                <tr>
-                    <td nowrap><font class="font12px">{{ ctime(info['utctime']) }}</font></td>
-                    <td><font class="font12px">{{ info['source'] }}</font></td>
-                    <td><font class="font12px">{{ info['facility'] }}</font></td>
-                    <td><font class="font12px">{{ info['severity'] }}</font></td>
-                    <td><font class="font12px">{{ info['information'] }}</font></td>
-                    <td align="right">
-                        <input type="submit" name="action" value="Delete" class="button" onclick="return confirm('Are you sure you want to delete this item?')">
-                    </td>
-                </tr>
-            </form>
-            {% endfor %}
-        </tbody>
+        <tbody id="logList"></tbody>
     </table>
     </div>
 
